# CounterStrike2D

./: .gitignore  CMakeLists.txt  Informe.md  ListaCosasPorHacer.txt  ManualDeProyecto.md  ManualUsuario.md  MapaDePruebaEditor.yaml  README.md  SmallDust.yaml  editor_config.yaml  manulon.cpp  mapaDeFede.yaml  mapaGiganteDust.yaml  menu.sh  testMap.txt
Ejemplo-Clase-SDL/libs/: Animation.cpp
Ejemplo-Clase-SDL/src/: Worm.cpp  Worm.h  mainSdlAlphaBlending.cpp
MATERIAL/Ejemplo-Clase-SDL/: CMakeLists.txt
MATERIAL/Ejemplo-Clase-SDL/src/: CMakeCache.txt  Makefile  cmake_install.cmake  mainSdlEvents.cpp  sdl-alpha-blending  sdl-events  sdl-hello
MATERIAL/Ejemplo-Clase-SDL/src/libs/: Makefile  cmake_install.cmake
Semana 1/: showAnImage.cpp
Semana1/: CMakeCache.txt  Makefile  SdlWindow.cpp  cmake_install.cmake  showAnImage.cpp
assets/config/: editor_config.yaml
assets/maps/: BigAztec.yaml  DustSmall.yaml  HugeInferno.yaml  SmallDust.yaml  mapTest.yaml  map_names.yaml  mapaGiganteDust.yaml  testMap.txt
client/include/: Animation.h  Bullett.h  Camera.h  Client.h  ClientMessage.h  ClientProtocol.h  Directions.h  DynamicObject.h  Event.h  EventHandler.h  GameOption.h  GameOptionAztec.h  GameOptionDust.h  GameOptionExit.h  GameOptionInferno.h  GameOptionJoinMode.h  GameOptionPlayer.h  GameOptionSelectMode.h  Image.h  InitialMenu.h  InitialMenuEventHandler.h  LoginMessage.h  Pointer.h  Soldier.h  Stencil.h  Text.h  Tile.h  TileMap.h  Weapon.h  Window.h
client/main/: client.cpp
client/source/: Animation.cpp  Camera.cpp  Client.cpp  ClientMesage.cpp  ClientProtocol.cpp  DynamicObject.cpp  Event.cpp  EventHandler.cpp  GameOption.cpp  GameOptionDust.cpp  (+18 more)
common/: AddressInfo.cpp  AddressInfo.h  BlockingQueue.cpp  BlockingQueue.h  CommunicationProtocol.cpp  CommunicationProtocol.h  ErrnoException.cpp  ErrnoException.h  Event.cpp  Event.h  NonBlockingQueue.cpp  NonBlockingQueue.h  ProtocolConstants.h  QueueClosedException.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h
editor/: CMakeLists.txt  EditorEventHandler.cpp  EditorEventHandler.h
include/: Animation.h  Area.h  Bullett.h  Camera.h  Dot.h  DynamicObject.h  Image.h  MouseManager.h  Music.h  Pointer.h  RenderizableFactory.h  SdlPoint.h  Soldier.h  SoundEffect.h  Stencil.h  Text.h  Tile.h  TileMap.h  Weapon.h  Window.h
mapEditor/: Button.cpp  Button.h  ButtonBox.cpp  ButtonBox.h  ButtonFloor.cpp  ButtonFloor.h  ButtonMisc.cpp  ButtonMisc.h  ButtonObstacles.cpp  ButtonObstacles.h  ButtonWall.cpp  ButtonWall.h  ButtonWeaponCharacter.cpp  ButtonWeaponCharacter.h  CMakeLists.txt  Editor.cpp  Editor.h  EditorConfig.cpp  EditorConfig.h  EditorEventHandler.cpp  EditorEventHandler.h  EditorMenu.cpp  EditorMenu.h  MapEditor.cpp  MapEditor.h  MapOptionAztec.cpp  MapOptionAztec.h  MapOptionDust.cpp  MapOptionDust.h  MapOptionInferno.cpp  MapOptionInferno.h  MenuEditorEventHandler.cpp  MenuEditorEventHandler.h  MenuOption.cpp  MenuOption.h  MenuOptionExitMode.cpp  MenuOptionExitMode.h  MenuOptionSelectMode.cpp  MenuOptionSelectMode.h  SizeOptionBig.cpp  (+7 more)
server/: Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  Entity.cpp  Entity.h  FireArm.cpp  FireArm.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  World.cpp  World.h  serverMain.cpp
server/events/: LoginEvent.h  QuitEvent.h  ServerEvent.h  ShootEvent.h
server/include/: Ak47.h  Border.h  Bullet.h  Client.h  ClientEvent.h  Clients.h  CollisionManager.h  Damage.h  Entity.h  FireArm.h  Game.h  GamesMonitor.h  Glock.h  Knife.h  Life.h  Loader.h  Map.h  Obstacle.h  PhysicalMapFactory.h  Player.h  PlayerInfoMessage.h  PrimaryWeapon.h  SWeapon.h  SecondaryWeapon.h  Server.h  ServerClient.h  ServerMessage.h  TertiaryWeapon.h  WeaponType.h  World.h
server/include/events/: LoginEvent.h  PickUpWeaponEvent.h  PlayerMovementEvent.h  QuitEvent.h  ShootEvent.h  StopPickingUpWeaponEvent.h  SwitchWeaponEvent.h  UpdateAngleEvent.h
server/include/messages/: BulletMessage.h  DeadMessage.h  JoinMessage.h  LifeMessage.h  OtherPlayerJoinedMessage.h  PlaintextMessage.h  PlayerInfoMessage.h  ServerMessage.h  WeaponMessage.h
server/source/: Ak47.cpp  Border.cpp  Bullet.cpp  Client.cpp  Clients.cpp  CollisionManager.cpp  Damage.cpp  Entity.cpp  FireArm.cpp  Game.cpp  GamesMonitor.cpp  Glock.cpp  Knife.cpp  Life.cpp  Loader.cpp  Obstacle.cpp  PhysicalMapFactory.cpp  PlaintextMessage.cpp  Player.cpp  PlayerInfoMessage.cpp  PrimaryWeapon.cpp  SWeapon.cpp  SecondaryWeapon.cpp  Server.cpp  ServerClient.cpp  ServerMessage.cpp  TertiaryWeapon.cpp  WeaponType.cpp  World.cpp  server.cpp
server/source/events/: LoginEvent.cpp  PickUpWeaponEvent.cpp  PlayerMovementEvent.cpp  QuitEvent.cpp  ServerEvent.cpp  ShootEvent.cpp  StopPickingUpWeaponEvent.cpp  SwitchWeaponEvent.cpp  UpdateAngleEvent.cpp
server/source/messages/: BulletMessage.cpp  DeadMessage.cpp  JoinMessage.cpp  LifeMessage.cpp  OtherPlayerJoinedMessage.cpp  PlaintextMessage.cpp  PlayerInfoMessage.cpp  WeaponMessage.cpp
server/threads/include/: ThreadAcceptor.h  ThreadClient.h  ThreadServerReceiver.h  ThreadServerSender.h
server/threads/source/: ThreadAcceptor.cpp  ThreadClient.cpp  ThreadServerReceiver.cpp  ThreadServerSender.cpp
source/: Animation.cpp  Area.cpp  Bullett.cpp  CMakeLists.txt  Camera.cpp  Dot.cpp  Image.cpp  MapParser.h  MouseManager.cpp  Music.cpp  Pointer.cpp  RenderizableFactory.cpp  SdlPoint.cpp  Soldier.cpp  SoundEffect.cpp  Stencil.cpp  Text.cpp  Tile.cpp  TileMap.cpp  Weapon.cpp  Window.cpp  box2dTest
source/Exception/: SdlFontException.cpp  SdlImageException.cpp  SdlMixException.cpp
source/SDL/Color/: SdlColor.cpp
source/SDL/Init/: SdlInitFont.cpp
source/SDL/Renderer/: SdlRenderer.cpp
source/SDL/Texture/: SdlFont.cpp  SdlSurface.cpp  SdlTexture.cpp
source/SDL/Window/: SdlWindow.cpp
source/sdl/: SdlInit.cpp  SdlMusic.cpp  SdlRenderer.cpp  SdlSoundEffect.cpp  SdlSurface.cpp  SdlTexture.cpp  SdlWindow.cpp
test/: box2d.cpp  clientTest.cpp  counterStrike2D.cpp  editor.cpp  exceptionTest.cpp  makeMap.cpp  pruebaDragAndDrop.cpp  serverTest.cpp  showAnImage.cpp  teswt.cpp  tiles.cpp
(+45 files in other folders)
