add_library(mapEditor
            MapEditor.cpp
            Editor.cpp
            EditorEventHandler.cpp
            EditorMenu.cpp
            MenuEditorEventHandler.cpp
            MenuOption.cpp
            MenuOptionSelectMode.cpp
            MenuOptionExitMode.cpp
            MapOptionInferno.cpp
            MapOptionDust.cpp
            MapOptionAztec.cpp
            Button.cpp
            ButtonBox.cpp
            ButtonFloor.cpp
            ButtonMisc.cpp
            ButtonObstacles.cpp
            ButtonWall.cpp
            ButtonWeaponCharacter.cpp
            EditorConfig.cpp
            )       