add_library(server
			source/Player.cpp
			source/World.cpp
			source/Obstacle.cpp
			source/Bullet.cpp
            source/FireArm.cpp
            source/Loader.cpp
            source/Entity.cpp
            source/CollisionManager.cpp
            source/Border.cpp
            source/PhysicalMapFactory.cpp
            source/Knife.cpp)